--- a/integrations/extensions/starter-kits/language-model-watsonx/watsonx-actions.json
+++ b/integrations/extensions/starter-kits/language-model-watsonx/watsonx-actions.json
@@ -1470,7 +1470,7 @@
       },
       {
         "title": "watsonx_project_id",
-        "variable": "watsonx_project_id",
+        "variable": "b1d3c94d-07f1-4e96-9fff-3de9766c249b",
         "data_type": "any",
         "description": ""
       }
